<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <EditText
            style="@style/textInputEditText"
            android:id="@+id/signUpNameEditTextId"
            android:hint="Enter Name"
            />
        <EditText
            android:layout_marginTop="10dp"
            style="@style/textInputEditText"
            android:id="@+id/signUpEmailEditTextId"
            android:hint="@string/enter_email"
            />
        <EditText
            android:layout_marginTop="10dp"
            style="@style/textInputEditText"
            android:inputType="number"
            android:id="@+id/signUpMobileEditTextId"
            android:hint="@string/mobile_number"
            />
        <EditText
            android:layout_marginTop="10dp"
            style="@style/passWordInputEditText"
            android:id="@+id/signUpPasswordEditTextId"
            android:hint="@string/enter_password"
            />
        <EditText
            android:layout_marginTop="10dp"
            style="@style/passWordInputEditText"
            android:id="@+id/signUpConfirmPasswordEditTextId"
            android:hint="@string/confirm_password"
            />
        <Button
            android:text="register"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            style="@style/button_style"
            android:textColor="@color/black"
            android:id="@+id/signUpButtonId"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminateTint="@color/colorActionBar"
            android:id="@+id/signUpProgressBarId"
            android:visibility="gone"/>
        />
    </LinearLayout>
</LinearLayout>