<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/enter_email"
            android:textSize="20sp"
            android:backgroundTint="@color/colorActionBar"
            android:id="@+id/loginEmailId"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:backgroundTint="@color/colorActionBar"
            android:inputType="numberPassword"
            android:id="@+id/loginPasswordId"
            android:layout_marginTop="10dp"
            />
        <Button
            android:text="Login"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            style="@style/button_style"
            android:textColor="@color/black"
            android:id="@+id/loginButtonId"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/have_not_account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUpTextViewId"
                android:textSize="15sp"
                android:textColor="#1565C0"
                android:textStyle="bold"
                android:text="@string/sign_up"
                />
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:indeterminateTint="@color/colorActionBar"
            android:id="@+id/loginProgressBarId"/>
    </LinearLayout>
</LinearLayout>